# storage-area-based-on-fastapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  spec.yml  storage_area_db  tasks.db  test_db
filebeat/: Dockerfile  filebeat.yml
migrations/: env.py
migrations/versions/: 2024_10_24_2357-c632068d3921_create_tables.py
src/: __init__.py  app.py  configs.py  middlewares.py  settings.py  utils.py
src/configs/: configs.py  settings.py
src/core/: admin.py  configs.py  security.py  settings.py
src/database/: database.py
src/depends/: database.py  depends.py  login.py  orders.py  products.py  users.py
src/dto/: orders.py  products.py  tokens.py  users.py
src/migrations/: env.py
src/repositories/: login.py  orders.py  products.py  users.py
src/routing/: __init__.py  login.py  orders.py  products.py  routes.py  users.py
src/schemas/: commons.py  orders.py  products.py  tokens.py  users.py
src/services/: login.py  orders.py  products.py  users.py
src/utils/: db_utils.py
storage_area/: __init__.py  app.py  config.py  database.py  middlewares.py  models.py  schemas.py  settings.py
storage_area/database/: database.py  models.py
storage_area/depends/: depends.py
storage_area/repositories/: orders.py  product_repository.py  products.py
storage_area/routing/: orders.py  products.py  products_router.py  routes.py
storage_area/schemas/: orders.py  products.py
storage_area/services/: orders.py  products.py
tests/: conftest.py  test_app.py  test_products.py
(+45 files in other folders)
